Что нового
==========
2015-01-12 версия 0.3h
----------------------
Исправлено отображение списка диалоговых групп где используется указанный опкод
  (ошибка появилась в 0.3g)
Загрузка сохранений доработана
Исправлено в компиляторе создание сцен с нулевым количеством ссылок на объекты

2014-12-29 версия 0.3g
----------------------
Исправлено отображение в списке фраз (сообщений)
Добавлены справочные файлы о опкодах (объектов и  диалогов)
Движок: улучшена загрузка иформации о подробностях сцен (перспектива, переходы)
Отображение информации о перспективе сцены
Движок: загрузка сохранений (частично)
Загрузка сохранений и отображение информации (частично)

2014-12-24 версия 0.3f
----------------------
Сортировка сообщений по имени файла, по порядку, по тексту
Информация о связанных файлах (FLC, MSG, LEF, OFF и BMP, CVX)
Исправлена ошибка при переходе из хранилища к файлу
Добавлен переход от ресурса к файлу
Открытие файлов осуществляется по имени а не номеру
Отображение истории переходов
Корректное описание текущего раздела
Изменено отображение списка сообщений, добавлен переход на wav файл
Движок: автоматическая загрузка файлов speech из хранилищ
Исправлена последовательная загрузка разделов
Сортировка списка всех файлов
Переход от хранилища к первому файлу в общем списке
Сортировка списка файлов в хранилище
Отступ от правого края для больших списков выбирается автоматически
Движок: декодирование файлов LEG, OFF, MSK
Отображение информации из LEG, OFF, MSK, FLC
Информация о текущем разделе отображается в заголовке окна

2014-12-20 версия 0.3e
----------------------
Распаковка содержимого STR файла

2014-12-20 версия 0.3d
----------------------
Отображение отсортированного списка используемых wav файлов

2014-12-20 версия 0.3c
----------------------
Отображение загруженных хранилищ (.str)
Загрузка хранилищ из отдельных файлов
Просмотр списка файлов
Теперь сообщение об ошибке корректно отображается при открытии через командную 
  строку

2014-06-10 версия 0.3b