@@ -6,6 +6,9 @@
   (ошибка появилась в 0.3g)
 Загрузка сохранений доработана
 Исправлено в компиляторе создание сцен с нулевым количеством ссылок на объекты
+Добавлены переходы из объектов к группамм диалогов с таким же номером, так как
+  они связаны
+Название изменено на "Petka Explorer", добавлены ссылка на сайт
 
 2014-12-29 версия 0.3g
 ----------------------
